# bmt-open-python-scripts

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  version.py
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  SECURITY.md  SUPPORT.md  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  greetings.yml  label.yml  python-package.yml  release.yml  stale.yml
__dev_logs__/commit_summaries/: 2025-04-30_95792cf8b431513502651c8b2ce915b9c938f7f0.md
docs/: README.md  autogen.md  github-workflows.md  plugins.md  project-structure.md  release.md  testing.md
scripts/: README.md  config.py
scripts/agents/: autogen_file_operations.py  autogen_group_chat.py
scripts/git/: commit-summary.py  commit_summary.py
scripts/webcam/: __init__.py  capture.py  list.py  record.py  show.py  stream.py
src/: README.md  __init__.py
src/bmt_libs/: README.md  __init__.py
src/bmt_libs/agents/autogen/: __init__.py  core.py
src/bmt_libs/hardware/: __init__.py  camera.py  screen.py
src/bmt_open_python_scripts/: __init__.py  _version.py  main.py
src/bmt_scripts/: README.md  __init__.py  _version.py  cli.py  main.py
src/bmt_scripts/agents/: autogen_code.py  autogen_example.py  autogen_file_operations.py  autogen_group_chat.py  mockup.py
src/bmt_scripts/config/: __init__.py  settings.py
src/bmt_scripts/git/: __init__.py  commit_summary.py
src/bmt_scripts/hardware/: __init__.py  screen.py  screen_capture.py
src/bmt_scripts/plugins/: README.md  plugin_manager.py
src/bmt_scripts/plugins/example/: main.py
src/bmt_scripts/webcam/: README.md  __init__.py  capture.py  list.py  record.py  show.py  stream.py
tests/: __init__.py  conftest.py  test_agent_mockup.py  test_config.py  test_git_commit_summary.py
